# Altium2KiCAD_db

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Altium2KiCAD_db.md  BUGFIX_BRANCH_README.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_IMPROVEMENT_PLAN.md  DOCUMENTATION_MIGRATION_MAP.md  Dockerfile  FEATURE_BRANCH_README.md  HOTFIX_BRANCH_README.md  LICENSE  MIGRATION_SUMMARY.md  Makefile  README.md  RELEASE_BRANCH_README.md  SECURITY.md  docker-compose.yml  gui_testing_report.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  run_cli.py  run_gui.py  setup.py  test_config_export.py  test_gui_debug.py
.github/workflows/: ci.yml  docs.yml  docs_build.yml  migrate-libraries.yml  release.yml
config/: category_mapping_rules.yaml  default_config.yaml  footprint_mapping_rules.yaml  symbol_mapping_rules.yaml
docs/: Makefile  building_docs.rst  conf.py  index.rst  installation.rst  main_window_architecture.md  make.bat  requirements.txt  usage.rst
docs/api/: cli.rst  core.rst  gui.rst  index.rst  utils.rst
docs/developer_guide/: api_reference.md  architecture.md  contributing.md  deployment.md  error_handling.md  extending.md  integration.md  monitoring.md  testing.md
docs/examples/: advanced_usage.md  basic_migration.md  batch_processing.md  custom_mapping.md  enterprise_setup.md
docs/examples/code_snippets/: advanced_mapping.py  altium_parser.py  config_manager.py  kicad_generator.py  mapping_engine.py  migration_app.py
docs/examples/configuration/: ci_config.yaml  enterprise_config.yaml  migration_config.yaml
docs/user_guide/: advanced_features.md  basic_usage.md  configuration.md  enterprise.md  faq.md  installation.md  performance.md  quick_reference.md  quickstart.md  security.md  troubleshooting.md
docs_build/: README.md
migration_tool/: __init__.py  api.py  cli.py  gui.py
migration_tool/core/: __init__.py  altium_parser.py  kicad_generator.py  mapping_engine.py
migration_tool/utils/: __init__.py  config_manager.py  database_utils.py  logging_utils.py
scripts/: build_docs.bat  build_docs.py  build_docs.sh  deploy.py  docker_deploy.sh  generate_sample_data.py  install.bat  install.sh  performance_benchmark.py  setup_dev_environment.py  uninstall.bat  uninstall.sh  validate_installation.py
tests/: README.md  __init__.py  conftest.py  test_altium_parser.py  test_api.py  test_cli.py  test_config_manager.py  test_gui.py  test_kicad_generator.py  test_mapping_engine.py
tests/integration/: test_database_operations.py  test_file_operations.py  test_full_migration.py
tests/performance/: test_large_datasets.py  test_memory_usage.py  test_parallel_processing.py
tests/unit/: test_altium_parser.py  test_config_manager.py  test_database_utils.py  test_kicad_generator.py  test_logging_utils.py  test_mapping_engine.py
